NIHVIVO-641: 'Browse by' title was cut off. It has been fixed. Thanks Tim.

--- a/webapp/web/css/menupage/menupage.css
+++ b/webapp/web/css/menupage/menupage.css
@@ -208,7 +208,7 @@ ul#find-filters a{
     overflow: hidden;
 }
 #browse-by h2{
-    width: 102px;
+    width: 120px;
     height: 44px;
     line-height: 44px;
     padding-left: 15px;
